# supply-chain-siren

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/supply_chain_siren/: __init__.py  cli.py  models.py  osint.py  parsers.py  scoring.py  utils.py
src/supply_chain_siren/data/: __init__.py  top_packages.json
tests/: conftest.py  test_parsers.py  test_scoring.py
