[project]
name = "supply-chain-siren"
version = "0.1.0"
description = "Heuristic supply-chain risk scanner that surfaces suspicious dependencies before they land in production."
authors = [{ name = "Usman" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "rapidfuzz>=3.9.3",
    "pydantic>=2.6.0",
    "platformdirs>=3.11.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
siren = "supply_chain_siren.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = ["src"]

